<resources>
    <string name="app_name">Together</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_lotgou">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_filter">FilterActivity</string>

    <!--spinner resource-->
    <string-array name="location_ranges">
        <item> Any Distance </item>
        <item> &lt; 0.5 Mile </item>
        <item> &lt; 1 Mile </item>
        <item> &lt; 2 Miles </item>

    </string-array>

    <!--spinner resource-->
    <string-array name="time_ranges">
        <item> Any Time </item>
        <item> Today </item>
        <item> In 3 Days </item>
        <item> In 1 Week</item>
        <item> In 2 Weeks </item>
    </string-array>

    <string name="locationHint">Search or Pin event location</string>
    <string name="category_hint">Pick A Category</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="qa_title"><![CDATA[Q&A]]></string>
    <string name="date">Event Date</string>
    <string name="eventTime">Start Time</string>
    <string name="durationTitle">Duration:</string>
    <string name="hour">Hour(s)</string>
    <string name="shortDescHint"><![CDATA[Short Description (< 30 characters)]]></string>
    <string name="longDescHint">Long Description for The Event</string>
    <string name="confirmDeleteEvent">Are you sure you want to cancel the event?</string>
    <string name="cancel">cancel</string>
    <string name="OK">ok</string>
    <string name="cancelevent">DELETE</string>
    <string name="wronglocation">Please refine the location wtihin 50 miles from Dartmouth!</string>
    <string name="empty_tag">EMPTY</string>
    <string name="post">post</string>
    <string name="save">save</string>
    <string name="refresh">REFRESH</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Wrong password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="re_post">repost</string>
    <string name="quit">QUIT</string>
    <string name="join">join</string>
    <string name="no_account">New User?</string>
    <string name="create_account">Create Account</string>
    <string name="prompt_password_new">password (>= 5 characters)</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="get_code">get code</string>
    <string name="error_incorrect_mail">Account not found!</string>


    <string name="ui_profile_photo_picker_title">Photo</string>
    <string name="dialog_fragment_tag_photo_picker">photo_picker_dialog_fragment</string>
    <string name="title_activity_profile">Profile</string>
    <string name="confirmRateEvent">Please rate the person</string>
    <string name="DELETE">delete</string>
    <string-array name="ui_profile_photo_picker_items">
        <item>Take picture from camera</item>
        <item>Choose pictore from gallery</item>
    </string-array>
</resources>
